k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oidc-keycloak-bff
  labels:
    name: oidc-keycloak-bff
    app: oidc-keycloak-bff
